pkg/ingress/kube/gateway/istio/testdata/mismatch.yaml
# Mismatch shows that we don't generate config for Gateways that do not match the GatewayClass
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: higress
spec:
  controllerName: higress.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: higress-system
spec:
  addresses:
  - value: higress-gateway
    type: Hostname
  gatewayClassName: something-else
  listeners:
  - name: default
    port: 80
    protocol: HTTP
